# on-prem-ai-note-taker

./: .gitignore  AUDIO_TROUBLESHOOTING.md  DESKTOP-APP-ARCHITECTURE.md  ELECTRON-CORS-FIX.md  ELECTRON-DEV-SETUP.md  ELECTRON_TO_TAURI_MIGRATION.md  ELECTRON_TO_TAURI_MIGRATION_OLD.md  FRONTEND-CORS-FIX.md  GETTING-STARTED.md  LICENSE  MEETING_STATUS_FLOW_FIX.md  PHASE_5_TESTING_GUIDE.md  PRELOAD_FIX_SUMMARY.md  README.md  README_WHISPER_CPP_MIGRATION.md  Restructiring.md  SECURITY-IMPROVEMENTS.md  VPS-OPTIMIZATIONS-README.md  audio-debug-commands.js  cors-debug.html  docker-compose.yml  electron-audio-debug.js  env.example  fix-cors.sh  frontend-config.md  important  package.json  performance-upgrade-frontend.md  performance-upgrade.md  pip.conf  quick-restart.sh  restart-services.sh  setup-frontend-env.bat  test-electron-cors.sh  test-electron-instructions.txt  test-trnastipt.txt  vite.frontend.config.js  workspace-feature-implementation.md
backend/: .env.bak.1756198043  .env.bak.1756199857  Dockerfile  celery_worker.py  env.example  requirements.txt  test_chunked_service.py  test_job_manager.py  test_jobs_api.py  test_progress.py
documents/: 01-BACKEND-SETUP.md  02-FRONTEND-SETUP.md  03-QUICK-START.md  04-ELECTRON-SETUP.md  DEVELOPMENT-SETUP.md  (+28 more)
src-tauri/: Cargo.toml  floating-recorder.html  tauri.conf.json
src-tauri/diarizer/local_server/: main.py  requirements.txt
src-tauri/icons/: README.md  icon.icns
src-tauri/plugins/audio_capture/: lib.rs
src-tauri/src/: audio.rs  coordinator.rs  env.rs  error.rs  fs.rs  ipc.rs  main.rs  multi_audio.rs  notifications.rs  performance.rs  tests.rs  tray.rs  whisper.rs  windows.rs
src-tauri/src/plugins/: audio_capture.rs  mod.rs
src-tauri/transcriber/local_server/: main.py  requirements.txt
(+396 files in other folders)
