[package]
name = "dgmeets-tauri"
version = "1.0.0"
description = "On-Prem AI Note Taker - Tauri Edition"
authors = ["dgMeets"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Audio capture libraries
cpal = "0.15"  # Cross-platform audio I/O
rodio = "0.17" # Audio playback/recording
hound = "3.5"  # WAV file I/O
uuid = { version = "1.6", features = ["v4"] }

# Local Whisper AI integration (placeholder for now)
# TODO: Add proper ML dependencies when ecosystem stabilizes
# candle-core = "0.7"         # Machine learning framework (when available)
# whisper-rs = "0.11"         # Rust Whisper bindings (when compatible)
# hf-hub = "0.3"              # Hugging Face model hub
anyhow = "1.0"                # Error handling
dirs = "5.0"                  # Directory utilities
reqwest = { version = "0.11", features = ["json", "multipart", "stream", "blocking", "rustls-tls"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
